    must start with /.
  * svwaitup.c: minimum uptime of services is 1 second; service directories
    no longer must start with /; print number of seconds a service is up if
    verbose.
  * man/svwaitdown.8, man/svwaitup.8: adapt.
  * doc/runscripts.html: add contributed run scripts (thx Stefan Karrmann,
    Kevin Berry, Karl Chen).

runit 1.2.0
Fri, 17 Dec 2004 21:08:50 +0000
  * doc/upgrade.html: typo.
  * runsv.c: support custom control commands through control/ directory,
    optionally switch off sending signal; don't update timestamp in status
    when running ./finish; only sleep for a second if ./run has been
    restarted within a second, and after updating status to down, normally
    up, want up.
  * man/runsv.8: document custom control commands.
  * runsv.check, runsv.dist: check custom control commands.
  * doc/runscripts.html: add contributed run scripts (thx Stefan Karrmann,
    Kevin Berry).

runit 1.1.0
Sat, 06 Nov 2004 17:21:11 +0000
  * svlogd.c: new config option t timeout (thx Enrico Scholz); config
    options e and E select and deselect lines for stderr respectively (thx
    Vladimir Smelhaus); new config option N.
  * man/svlogd.8: adapt.
  * runsv.c: on commands down and exit send CONT after TERM.
  * man/runsv.8: adapt.
  * etc/2: use -P option to runsvdir.
  * src/svlogd.check: add check for t config option.
  * chpst.c: new option -n: adjust nice level.
  * man/chpst.8: adapt.

runit 1.0.5
Tue, 21 Sep 2004 18:18:14 +0000
  * svlogd.c: fix line buffer handling for pattern matching (thx Enrico
    Scholz); properly retry writing to current on error; minor.
  * doc/index.html: wording; add link to useinit.html; remove link to runit
    on linuxfromscratch.
  * doc/runscripts.html: add hint, some getties need to be run in a new
    session/process group (thx Dan Melomedman).
  * man/svlogd.8: minor fixes.
  * man/svwaitdown.8: remove hint about -x option.
  * package/check, package/compile, package/install, package/install-man,